--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -78,3 +78,37 @@
 .logo-style{
   @apply bg-clip-text text-transparent bg-gradient-to-br from-blue-400 to-green-400 dark:from-blue-500 dark:to-green-600
 }
+
+.hero_animation {
+  background-image: linear-gradient(147.92deg, hsla(239, 76%, 53%, 0.456) 10.41%, hsla(0, 0%, 100%, 0) 89.25%);
+  animation: changeBackgroundColor 8s infinite alternate;
+}
+
+@keyframes changeBackgroundColor {
+
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  16.67% {
+    opacity: 0.9;
+  }
+
+  33.33% {
+    opacity: 0.8;
+  }
+
+  50% {
+    opacity: 0.6;
+  }
+
+  66.67% {
+    opacity: 0.5;
+  }
+
+  83.33% {
+    opacity: 0.4;
+  }
+
+}
