--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -79,6 +79,10 @@
   @apply bg-clip-text text-transparent bg-gradient-to-br from-blue-400 to-green-400 dark:from-blue-500 dark:to-green-600
 }
 
+.title{
+  @apply text-[25px] text-black dark:text-white font-[500] text-center py-4
+}
+
 .hero_animation {
   background-image: linear-gradient(147.92deg, hsla(239, 76%, 53%, 0.456) 10.41%, hsla(0, 0%, 100%, 0) 89.25%);
   animation: changeBackgroundColor 8s infinite alternate;
